--- a/game1.html
+++ b/game1.html
@@ -105,7 +105,7 @@
     <div id="canvas" >    
          <!-- <img src='images/fruit1.png'  class='fruit' style="left:100px; bottom: 100px;"> -->
     </div>
-
+<button id="button">Stop</button>
 
 </body>
 </html>
